<resources>
    <string name="app_name">PowerRoutine</string>
    <string name="inicio"><u>Inicio de Sesión</u></string>
    <string name="nombrePlain">Nombre de Usuario o Email</string>
    <string name="contraseñaPlain">Contraseña</string>
    <string name="loginButton">Entrar</string>
    <string name="resgisterButton">Registrarse</string>
    <string name="registroText"><u>Registrarse</u></string>
    <string name="loginText"><u>Iniciar Sesión</u></string>
    <string name="registroNombre">Nombre de usuario</string>
    <string name="registroEmail">Email</string>
    <string name="headUserOpcion"><u>Configura tus objetivos</u></string>
    <string name="daysweek">¿De cuantos dias a la semana quieres generar la rutina?</string>
    <string name="level">¿Cual es tu nivel?</string>
    <string name="btnPrincipiante">Principiante</string>
    <string name="btnMedio">Intermedio</string>
    <string name="btnPro">Profesional</string>
    <string name="objetiveText">¿Cual es tu objetivo?</string>
    <string name="objetiveHipertrofy">Hipertrofia</string>
    <string name="objetiveStrong">Fuerza</string>
    <string name="objetiveTono">Tonificar</string>
    <string name="objetiveSavebtn">Guardar Preferencias</string>
    <string name="rutineSelectedTitle"><u>Seleciona una rutina</u></string>
    <string name="diaTextSelected">Dia </string>
    <string name="saveSelectedRutine">Guardar Selección</string>
    <string name="dayRestChoice">Restantes por escoger:</string>
    <string name="ejercicesRestChoice">Ejercicios por escoger:</string>
    <string name="ejercicesSelectedTitle"><u>Seleciona Ejercicios</u></string>
    <string name="rutinaSelected">Rutina</string>
    <string name="homeTitle">Tus Rutinas</string>
    <string name="titleRutineDetails">Rutina</string>
    <string name="btnDetallesCard">Start</string>
    <string name="btnHechoCard">Hecho</string>
    <string name="btnDetallesCardBack">Atras</string>
    <string name="btnHechoCardRutine">Hecho</string>
    <string name="ejercideDetailMuscle">Músculo</string>
    <string name="ejercideDetailTecnica">Técnica</string>
    <string name="btnDeleteUser">Eliminar</string>
    <string name="btnSaveUser">Guardar</string>
    <string name="btnUpdateText">Cambiar</string>
    <string name="btnDesconected">Salir</string>
    <string name="theme">Cambiar tema</string>


</resources>