<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_dark"
    tools:context=".UserOpcionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleDetailsEjercice"
            style="@style/TextViewHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/headUserOpcion"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="783dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/titulo1"
                    style="@style/TextViewOnBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daysweek"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDays2"
                        style="@style/ButtonBaseStyleOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="selectDays"
                        android:paddingLeft="10dp"
                        android:paddingTop="6dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"
                        android:text="2"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDays3"
                        style="@style/ButtonBaseStyleOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="selectDays"
                        android:text="3"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDays4"
                        style="@style/ButtonBaseStyleOrange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:onClick="selectDays"
                        android:text="4"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daysweek"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                style="@style/TextViewOnBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNovel"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selectLevel"
                    android:text="@string/btnPrincipiante"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnMedio"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selectLevel"
                    android:text="@string/btnMedio"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPro"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="selectLevel"
                    android:text="@string/btnPro"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                style="@style/TextViewOnBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objetiveText"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnHipertrofy"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selectObjetive"
                    android:text="@string/objetiveHipertrofy"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnStrong"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selectObjetive"
                    android:text="@string/objetiveStrong"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTono"
                    style="@style/ButtonBaseStyleOrange"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="selectObjetive"
                    android:text="@string/objetiveTono"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="699dp"
                android:layout_height="169dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.646"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.86"
                app:srcCompat="@drawable/gym" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                style="@style/ButtonBaseStyleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="savePreferences"
                android:outlineSpotShadowColor="#F8F4F4"
                android:shadowColor="#F6EFEF"
                android:text="@string/objetiveSavebtn"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>